# Webgal_transformEditor

./: .gitignore  README.md  SCIFI_THEME_README.md  filter-editor.html  index.html  package-lock.json  package.json  pdflatex-header.tex  release.sh  script-output.html  test_fix.js  vite.config.ts
.github/workflows/: release.yml
media-223389ac98cc9354/: input.aux  input.tex
public/: filter-presets.json  position-presets.json
src/: App.css  App.tsx  FilterEditorWindow.tsx  ScriptOutputWindow.tsx  TransformEditor.tsx  filter-editor-main.tsx  global.d.ts  main.tsx  sci-fi-theme.css  script-output-main.tsx  transform-editor.css
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: file_server.rs  main.rs
src/components/: CanvasRenderer.tsx  FigureManagerPanel.css  FigureManagerPanel.tsx  FileBrowser.css  FileBrowser.tsx  FilterConsole.css  FilterConsole.tsx  FilterEditor.tsx  Modal.tsx  RotationPanel.tsx  WebGALMode.tsx
src/containers/: pixiContainer.ts
src/filters/: BevelFilter.ts  OverlayBlendFilter.ts  RadiusAlphaFilter.ts
src/types/: guideLines.ts  transform.ts
src/utils/: addFigure.ts  blendModeMap.ts  figureManager.ts  fileTypeDetector.ts  jsonlParser.ts  transformParser.ts  webgalFileManager.ts  webgalPathResolver.ts
