[package]
name = "transformeditor"
version = "1.3.0"
description = "WebGAL Transform Editor - A visual script editor for WebGAL game engine with transform editing capabilities for figures and backgrounds"
authors = ["DongshanRandeng"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "transformeditor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-log = "2.6.0"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tiny_http = "0.12"
tokio = { version = "1", features = ["full"] }
urlencoding = "2.1"

